--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -22,7 +22,7 @@
                 <tr *ngFor="let selecao of grupoACopia; index as i">
                         <th class="tabela-selecao">
                         <!--<span class="flag-icon flag-icon-br"></span>-->
-                        <span [ngClass]="[carregaFlag()]"></span>
+                        <span [ngClass]="[carregaFlag(selecao)]"></span>
                         {{selecao.nome}}
                         </th>
                         <th>{{selecao.pontos}}</th>
@@ -61,7 +61,8 @@
             </thead>
             <tbody *ngIf="grupoB">
                 <tr *ngFor="let selecao of grupoB; index as i">
-                    <th class="tabela-selecao">{{selecao.nome}}</th>
+                    <th class="tabela-selecao">
+                        <span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
                         <th>{{selecao.pontos}}</th>
                         <th>{{atualizaPartidas(selecao,grupoB)}}</th>
                         <th>{{atualizaVitorias(selecao,grupoB)}}</th>
