--- a/src/app/rodada/rodada.component.html
+++ b/src/app/rodada/rodada.component.html
@@ -7,9 +7,9 @@
                 
             <!-- <button [disabled]="rodada3" (click)="visualizarProximaRodada()" type="input" class="col-2 btn btn-primary"> >>
                 </button> -->
-            <a href=""><i class="fa-solid fa-angles-left"></i></a>
+            <a class="text-primary" (click)="visualizarRodadaAnterior()"><i class="fa-solid fa-angles-left"></i></a>
             <h3>{{mostraRodada()}}</h3>
-            <a href=""><i class="fa-solid fa-angles-right"></i></a>
+            <a class="text-primary" (click)="visualizarProximaRodada()"><i class="fa-solid fa-angles-right"></i></a>
         </div>
         
     </div>
