--- a/src/app/tabela/tabela.component.html
+++ b/src/app/tabela/tabela.component.html
@@ -20,19 +20,19 @@
             </thead>
             <tbody *ngIf="grupoA">
                 <tr *ngFor="let selecao of grupoACopia; index as i">
-                        <th class="tabela-selecao">
+                        <th [ngClass]="classificadosPraProximaFase(i)">
                         <!--<span class="flag-icon flag-icon-br"></span>-->
                         <span [ngClass]="[carregaFlag(selecao)]"></span>
                         {{selecao.nome}}
                         </th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoA)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoA)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoA)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoA)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoA)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoA)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoA)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoA)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -60,17 +60,17 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoB">
-                <tr *ngFor="let selecao of grupoB; index as i">
-                    <th class="tabela-selecao">
+                <tr *ngFor="let selecao of grupoBCopia; index as i">
+                    <th [ngClass]="classificadosPraProximaFase(i)">
                         <span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoB)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoB)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoB)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoB)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoB)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoB)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoB)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoB)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -97,16 +97,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoC">
-                <tr *ngFor="let selecao of grupoC; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoC)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoC)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoC)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoC)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoC)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoC)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoC)}}</th>
+                <tr *ngFor="let selecao of grupoCCopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoC)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoC)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -133,16 +133,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoD">
-                <tr *ngFor="let selecao of grupoD; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoD)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoD)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoD)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoD)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoD)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoD)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoD)}}</th>
+                <tr *ngFor="let selecao of grupoDCopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoD)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoD)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -169,16 +169,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoE">
-                <tr *ngFor="let selecao of grupoE; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoE)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoE)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoE)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoE)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoE)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoE)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoE)}}</th>
+                <tr *ngFor="let selecao of grupoECopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoE)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoE)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -205,16 +205,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoF">
-                <tr *ngFor="let selecao of grupoF; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoF)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoF)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoF)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoF)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoF)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoF)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoF)}}</th>
+                <tr *ngFor="let selecao of grupoFCopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoF)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoF)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -241,16 +241,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoG">
-                <tr *ngFor="let selecao of grupoG; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoG)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoG)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoG)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoG)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoG)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoG)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoG)}}</th>
+                <tr *ngFor="let selecao of grupoGCopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoG)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoG)}}</th>
                     </tr>
             </tbody>
         </table>
@@ -277,16 +277,16 @@
                 </tr>
             </thead>
             <tbody *ngIf="grupoH">
-                <tr *ngFor="let selecao of grupoH; index as i">
-                        <th class="tabela-selecao"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
-                        <th>{{selecao.pontos}}</th>
-                        <th>{{atualizaPartidas(selecao,grupoH)}}</th>
-                        <th>{{atualizaVitorias(selecao,grupoH)}}</th>
-                        <th>{{atualizaEmpate(selecao,grupoH)}}</th>
-                        <th>{{atualizaDerrota(selecao,grupoH)}}</th>
-                        <th>{{atualizaGolsPro(selecao,grupoH)}}</th>
-                        <th>{{atualizaGolsContra(selecao,grupoH)}}</th>
-                        <th>{{atualizaSaldoGols(selecao,grupoH)}}</th>
+                <tr *ngFor="let selecao of grupoHCopia; index as i">
+                        <th [ngClass]="classificadosPraProximaFase(i)"><span [ngClass]="[carregaFlag(selecao)]"></span>{{selecao.nome}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{selecao.pontos}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaPartidas(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaVitorias(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaEmpate(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaDerrota(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsPro(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaGolsContra(selecao,grupoH)}}</th>
+                        <th [ngClass]="classificadosPraProximaFase(i)">{{atualizaSaldoGols(selecao,grupoH)}}</th>
                     </tr>
             </tbody>
         </table>
