--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,12 +11,13 @@
       
     </div>
     <div class="col-8">
-      
       <app-tabela></app-tabela>
     </div>
     <div class="col-4">
       <app-rodada></app-rodada>
     </div>
+
+    <app-footer></app-footer>
   </div>
 </div>
 
