--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,21 +3,16 @@
     <div class="tabela-head">
       <h1>Bolão Copa Qatar 2022</h1>
     </div>
-    <div class="col-12 faseDeGrupos_botoes">
-      <a href=""><i class="fa-solid fa-angles-left"></i></a>
-      <h2>Fase de grupos</h2>
-      <!-- {{mostraRodada()}} -->
-      <a href=""><i class="fa-solid fa-angles-right"></i></a>
-      
-    </div>
-    <div class="col-8">
-      <app-tabela></app-tabela>
-    </div>
-    <div class="col-4">
-      <app-rodada></app-rodada>
-    </div>
-
-    <app-footer></app-footer>
   </div>
+  <div class="col-12 faseDeGrupos_botoes">
+    <a href=""><i class="fa-solid fa-angles-left"></i></a>
+    <h2>Fase de grupos</h2>
+    <!-- {{mostraRodada()}} -->
+    <a (click)="proximaFase()" class="text-primary"><i class="fa-solid fa-angles-right"></i></a>  
+  </div>
+  <router-outlet></router-outlet>
+
 </div>
+
+
 
