Finalizando controladores de fase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="col-12 faseDeGrupos_botoes">
-    <a href=""><i class="fa-solid fa-angles-left"></i></a>
+    <a (click)="faseAnterior()" class="text-primary"><i class="fa-solid fa-angles-left"></i></a>
     <h2>Fase de grupos</h2>
     <!-- {{mostraRodada()}} -->
     <a (click)="proximaFase()" class="text-primary"><i class="fa-solid fa-angles-right"></i></a>  
